feat: add multi-currency support
- Added support for multiple Stripe API keys per currency
- Checkout sessions use currency-specific secret key
- Orders and Items restricted to single currency per checkout

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,12 @@ STRIPE_PUBLISHABLE_KEY=pk_test_xxx
 DEFAULT_CURRENCY=usd
 STRIPE_WEBHOOK_SECRET=whsec_xxx
 
+# Stripe per-currency keypairs
+STRIPE_SECRET_KEY_USD=sk_test_xxx
+STRIPE_PUBLISHABLE_KEY_USD=pk_test_xxx
+
+STRIPE_SECRET_KEY_EUR=sk_test_xxx
+STRIPE_PUBLISHABLE_KEY_EUR=pk_test_xxx
+
 SUCCESS_URL=http://localhost:8000/success/
 CANCEL_URL=http://localhost:8000/cancel/
